FINALLY got some AJAX stuff to work.